# finance-infra

./: .gitignore  docker-compose.yaml
cdk/: cdk.json  package-lock.json
cdk/assets/lambda/consumerLambda/: Dockerfile  index.py
cdk/assets/lambda/publisherLambda/: index.py
cdk/lib/stacks/: ingestion-stack.ts
docker/webhook/: Dockerfile  pyproject.toml
docker/webhook/app/: __init__.py  consumer.py  parser.py  producer.py
docker/webhook/config/: envs.yaml
docker/webhook/config/infra/: kafka.yaml
